//package wanyou.game.protocol;
//发送消息

message BceChat {
    required int32 msgType = 1;         //消息类型  0:当前 1:私聊 2:工会 3:小喇叭 4:大喇叭 5:小队
    required string msgContent = 2;     //消息内容
    optional string usrId = 3;          //发送给谁 私聊用到
}
